# ECG-Arrhythmia-Classification-ResNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/mitbih/: README.md
docs/: report.md
ecg_classification/: __init__.py  augment.py  constants.py  data.py  figures.py  metrics.py  model.py  train.py  utils.py
notebooks/: JM_Source_Code_refactored.ipynb
