[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-arrhythmia-classification"
version = "0.1.0"
description = "Refactored ECG heartbeat classification pipeline for MIT-BIH CSV data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["ecg_classification*"]
